test/conformance/kuttl/reports/admission/namespaceselector/02-pod.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
apply:
- file: pods.yaml
assert:
- pods.yaml
