test/conformance/kuttl/reports/admission/namespaceselector/03-report.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- report-expected.yaml
error:
- report-unexpected.yaml
