test/conformance/kuttl/reports/admission/namespaceselector/report-expected.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  namespace: test-audit-reports-namespacesselector
  ownerReferences:
  - apiVersion: v1
    kind: Pod
    name: audit-pod
results:
- policy: test-audit-reports-namespacesselector
  resources:
  - apiVersion: v1
    kind: Pod
    name: audit-pod
    namespace: test-audit-reports-namespacesselector
  result: fail
  rule: test-audit-reports-namespacesselector
