test/conformance/kuttl/reports/admission/namespaceselector/report-unexpected.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  name: cpol-test-audit-reports-namespacesselector
  namespace: test-non-nonaudit-reports-namespacesselector
